<resources>
    <string name="app_name">Messenger</string>

    <string name="nickname_text_hint">Enter your username</string>
    <string name="password_text_hint">Enter your password</string>
    <string name="sign_in_button_text">SIGN IN</string>
    <string name="not_registered_text">Not registered?</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="what_i_do_text">What I do</string>
    <string name="search_bar_text">Search</string>
    <string name="test_name">Name Surname</string>
    <string name="test_time">10 hour</string>
    <string name="test_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</string>
    <string name="profile_name_hint">Your Nickname</string>
    <string name="profession_text">Profession</string>
    <string name="update_button_text">Update</string>
    <string name="profile_sign_out_button_text">SIGN OUT</string>
    <string name="message_hint">Message</string>
    <string name="test_time_hh_mm">23:59</string>
    <string name="chat_list_empty">Chat list empty</string>
</resources>