<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="ge.gmikeladze.messenger.view_model.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.LoginActivity">

            <include
                android:id="@+id/loginUserIdentification"
                layout="@layout/user_identification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_avatar_imageview_top_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sign_in_button_top_margin"
                android:background="@drawable/authorization_button_frame"
                android:clickable="@{model.isSignInClickable}"
                android:paddingHorizontal="@dimen/button_horizontal_padding"
                android:paddingVertical="@dimen/button_vertical_padding"
                android:text="@string/sign_in_button_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sign_in_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginUserIdentification" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/notRegisteredText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signInButton" />

            <TextView
                android:id="@+id/notRegisteredText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/not_registered_bottom_margin"
                android:text="@string/not_registered_text"
                android:textColor="@color/not_registered_text_color"
                android:textSize="@dimen/not_registered_text_size"
                app:layout_constraintBottom_toTopOf="@id/signUpButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/signUpButton"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sign_up_button_bottom_margin"
                android:clickable="@{model.isSignUpClickable}"
                android:text="@string/sign_up_button_text"
                android:textColor="@color/not_registered_text_color"
                android:textSize="@dimen/sign_up_text_size"
                app:cornerRadius="@dimen/login_page_button_corner_radius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@color/not_registered_text_color" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{model.isProgressBarVisible ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>